# PyStarter

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  entrypoint.sh
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/ai/: anthropic_provider.py  prompts.py  providers.py  urls.py  views.py
backend/apps/common/: throttles.py  views.py
backend/apps/curriculum/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/executor/: sandbox.py
backend/apps/submissions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py  production.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts  curriculum.spec.ts  exercises.spec.ts  health-check.spec.ts  helpers.ts  hints.spec.ts  module-completion.spec.ts  module11-exercises.spec.ts  module12-exercises.spec.ts  module13-exercises.spec.ts  module14-exercises.spec.ts  module2-exercises.spec.ts  module3-exercises.spec.ts  module4-exercises.spec.ts  module5-exercises.spec.ts  module6-exercises.spec.ts  module9-exercises.spec.ts  not-found.spec.ts  password-reset.spec.ts  progression.spec.ts  sandbox.spec.ts  try-it-yourself.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  curriculum.ts  submissions.ts  types.ts
nginx/: nginx.conf
scripts/: backup-db.sh
(+26 files in other folders)
